Mutex lock active in SensorEventListener and Producer.
Locks apply when trying to read/write sensorValuesList which holds the
lin acc or gyroscope samples.
Producer now puts deep copies of the samples into the BlockingQueue.